# cdn-video-landing

./: .prettierrc.js  Dockerfile  next.config.ts  package.json
app/: globals.css  layout.tsx  page.tsx  request-action.ts
letter/: index copy.html  index.html  index.mjml
lib/assets/: index.ts
lib/assets/images/: bg3-sm.tsx  bg3.tsx
lib/components/: advantages.tsx  background.tsx  become-partner-link.tsx  features.tsx  footer.tsx  header.tsx  how-it-works.tsx  input.tsx  qa.tsx  request-form.tsx  video-player.tsx
lib/constants/: request-form.ts
lib/utils/: scroll.ts
mailer-worker/: .env.example  Cargo.toml  Dockerfile
mailer-worker/src/: main.rs
web/: .env.example  .gitignore  Dockerfile  next.config.ts  svgo.config.js
web/app/: globals.css  page.tsx  request-action.ts
web/lib/: prisma.ts
web/lib/assets/: index.ts
web/lib/assets/images/: bg3-sm.tsx  bg3.tsx
web/lib/components/: advantages.tsx  background.tsx  become-partner-link.tsx  button.tsx  features.tsx  footer.tsx  header.tsx  how-it-works.tsx  input.tsx  link-button.tsx  posters.tsx  qa.tsx  request-form.tsx  send-request-link.tsx  video-player.tsx
web/lib/constants/: request-form.ts
web/prisma/: schema.prisma
web/prisma/migrations/20260213204042_init/: migration.sql
